--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-scroller": "^2.2.4",
     "vuex": "^3.0.1",
     "vux": "^2.7.7"
   },
